--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -29,10 +29,10 @@ li
     display: none
 
 .list
-    padding-left: 1em
-    padding-right: 1em
     width: 96%
     margin: 0 auto
+    a
+        display: block
 
 +breakpoint($tablet)
     .list, .detail
@@ -44,6 +44,8 @@ li
         width: 50%
         padding-left: 1.5em
         padding-right: 0.5em
+        li
+            margin-right: 1em
 
 +breakpoint($desktop)
     .detail
