--- a/sass/_style.sass
+++ b/sass/_style.sass
@@ -2,7 +2,6 @@ $line-width: 0.65em
 
 .today
     border-left: $line-width solid $pink
-    border-bottom: 1px solid $near-black
 .soon
     border-left: $line-width solid $orange
 .later
